<resources>
    <string name="app_name">My First Form</string>
    <string name="required_param">*requerido</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="retype_password">Repetir contraseña</string>
    <string name="female_gendre">Femenino</string>
    <string name="male_gendre">Masculino</string>
    <string name="music_hobbie">Musica</string>
    <string name="movie_hobbie">Peliculas</string>
    <string name="read_hobbie">Lectura</string>
    <string name="games_hobbie">VideoJuegos</string>
    <string name="birth_Date">Selecciona tu fecha de nacimiento</string>
    <string name="city">Ciudad de nacimiento</string>
    <string name="save_button">Guardar</string>
    <string name="hobbies_select">Selecciona tus hobbies</string>
    <string name="sex_select">Selecciona tu sexo</string>
    <string name="show_info">Aquí se mostrará la información ingresada</string>
    <string name="sign_in_button">Ingresar</string>
    <string name="show_info_sign_up">Si no tienes cuenta, <u>REGISTRATE</u></string>

    <string-array name="ciudades">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_series">Mis Series</string>
    <string name="title_series">Series</string>
    <string name="title_profile">Mi Perfil</string>
    <string name="temporadas">Cantidad Temporadas</string>
    <string name="resumen">Resumen Serie</string>
    <string name="ranking">Ranking Serie</string>
    <string name="genre_select">Selecciona Genero</string>
    <string name="terror_serie">Terror</string>
    <string name="suspen_serie">Suspenso</string>
    <string name="drama_serie">Drama</string>
    <string name="ciencia_serie">Ciendia Ficcion</string>
    <string name="example_serie_name">Dark</string>
    <string name="example_cant_temp">4 Temporadas</string>

</resources>