<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_series">

    <fragment
        android:id="@+id/navigation_my_series"
        android:name="com.danielfmunoz.myfirstform.ui.bottomMenu.mySeries.MySeriesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_my_series" />

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.danielfmunoz.myfirstform.ui.bottomMenu.series.SeriesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.danielfmunoz.myfirstform.ui.bottomMenu.profile.MyProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>