<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PrimaryColor"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingTop="30dp"
        android:paddingRight="60dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/TertiaryColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/TertiaryColor"
            app:counterTextColor="@color/black"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintEnabled="true"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/temporadas"
            android:textColorHint="@color/TertiaryColor"
            app:boxStrokeColor="@color/TertiaryColor"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintEnabled="true"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_seasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/resumen"
            android:textColorHint="@color/TertiaryColor"
            app:boxStrokeColor="@color/TertiaryColor"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintEnabled="true"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/ranking"
            android:textColorHint="@color/TertiaryColor"
            app:boxStrokeColor="@color/TertiaryColor"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintEnabled="true"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:digits="012345"
                android:maxLength="1"
                android:id="@+id/et_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/genre_select"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_genre_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terror_serie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />

            <CheckBox
                android:id="@+id/cb_genre_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suspen_serie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_genre_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drama_serie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />

            <CheckBox
                android:id="@+id/cb_genre_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ciencia_serie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_registrar_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/save_button" />

    </LinearLayout>

</ScrollView>